--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -22,7 +22,9 @@ html * {
  *********************************************/
 body {
   background: #002b36;
-  background-color: #002b36; }
+  background: #131325;
+  background-color: #002b36;
+  background: #131325; }
 
 .reveal {
   font-family: "Lato", sans-serif;
